--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <!-- Column 3 (horizontal, vertical, horizontal, vertical) -->
           <div class="image fit container">
             <a href="./cognome-nome/pagina-esempio-1.html"
-              ><img src="https://placeimg.com/800/533/tech/grayscale?c" alt=""
+              ><img src="img/Giovanni Falcone.jpg"
             />
             <div class="overlay">
               <div class="text">Magrinello</div>
@@ -149,7 +149,7 @@
           <div class="image fit container">
             <a href="./cognome-nome/pagina-esempio-1.html"
               ><img
-                src="img/Giovanni Falcone.jpg"
+                src=""
                 alt=""
             /><div class="overlay">
               <div class="text">Marastoni</div>
