--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <!-- Column 3 (horizontal, vertical, horizontal, vertical) -->
           <div class="image fit container">
             <a href="./cognome-nome/pagina-esempio-1.html"
-              ><img src="img/Giovanni Falcone.jpg"
+              ><img src="img/Giovanni Falcone.jpg" alt=""
             />
             <div class="overlay">
               <div class="text">Magrinello</div>
@@ -149,7 +149,7 @@
           <div class="image fit container">
             <a href="./cognome-nome/pagina-esempio-1.html"
               ><img
-                src=""
+                src="https://placeimg.com/533/800/animals/grayscale?c"
                 alt=""
             /><div class="overlay">
               <div class="text">Marastoni</div>
