--- a/EmanueleMagrinello/pagina1.html
+++ b/EmanueleMagrinello/pagina1.html
@@ -23,7 +23,7 @@
 			<div id="preview">
 				<div class="inner">
 					<div class="image fit">
-						<img src="img/Giovanni Falcone.jpg" alt="" />
+						<img src="Giovanni Falcone.jpg" alt="" />
 					</div>
 					<div class="content">
 						<header>
