--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <!-- Column 3 (horizontal, vertical, horizontal, vertical) -->
           <div class="image fit container">
             <a href="./EmanueleMagrinello/pagina1.html"
-              ><img src="img/Giovanni Falcone.jpg" alt=""
+              ><img src="img/Giovanni Falcone.jpeg" alt=""
             />
             <div class="overlay">
               <div class="text">Magrinello</div>
